Spremenjen access modifier za kvize na public, delno rešen Kviz2